# ffxiv-triple-triad-companion

./: .gitignore  CLAUDE.md  PRD.md  README.md  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
benchmarks/: identical-hands-timing.ts  server-solve-timing.ts  wasm-solve-timing.ts
docs/: DEVELOPMENT.md
docs/decisions/: 2026-03-05-engine-implementation-decisions.md  2026-03-06-ui-implementation-decisions.md  2026-03-07-solver-correctness-fixes.md  2026-03-15-card-id-design.md  2026-03-17-rust-wasm-solver-design.md  2026-03-18-pimc-performance-baseline.md  2026-03-18-wasm-interface-design-lessons.md  2026-03-24-pimc-redundant-recomputation.md  2026-03-24-pimc-sampling-consolidation.md  2026-03-24-qol-features-decisions.md  2026-03-24-solver-interruption-benchmarks.md  2026-04-01-mutation-testing-results.md  2026-04-02-benchmark-separation.md  2026-04-02-score-based-eval-and-negamax.md  2026-04-02-scoring-sorting-analysis.md  2026-04-07-visual-regression-tests.md
docs/plans/: 2026-03-04-triple-triad-engine-design.md  2026-03-04-triple-triad-engine-plan.md  2026-03-05-svelte-ui-design.md  2026-03-05-svelte-ui-plan.md  2026-03-06-phase2-ui-improvements-design.md  2026-03-06-phase2-ui-improvements-plan.md  2026-03-15-card-id-design.md  2026-03-15-card-id-implementation.md  2026-03-17-rust-wasm-solver-design.md  (+5 more)
engine-rs/: Cargo.toml
engine-rs/src/: board.rs  lib.rs  pimc.rs  solver.rs  types.rs
engine-rs/tests/: board_fixtures.rs  solver_fixtures.rs
scripts/: generate-board-fixtures.ts  generate-solver-fixtures.ts  scrape-cards.ts
(+124 files in other folders)
