[package]
name = "engine-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "engine_rs"
crate-type = ["cdylib", "rlib"]

[features]
# Enables native Axum server binary and Rayon-parallel PIMC.
server = ["dep:axum", "dep:tokio", "dep:rayon", "dep:rand", "dep:tower-http", "dep:clap", "dep:tracing", "dep:tracing-subscriber"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
# Server-only:
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
rayon = { version = "1", optional = true }
rand = { version = "0.10", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
clap = { version = "4", features = ["derive"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tracing-test = "0.2"
tracing = "0.1"

[[bin]]
name = "server"
required-features = ["server"]

[profile.release]
# Enable link-time optimization for better WASM output.
# "thin" is much faster than "fat" LTO and still improves WASM by ~15-30%.
lto = "thin"
# Single codegen unit: slower compile, better inlining across functions.
codegen-units = 1
